# exam_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: docker-build.yaml  linting.yaml  load-test.yaml  tests.yaml  train-on-change.yaml
checklist/: PROJECT_CHECKLIST.md
checkpoints/: model-epoch=03-val_loss=1.07.ckpt  model-epoch=04-val_loss=1.08.ckpt
coffee_leaf_classifier/: README.md  pyproject.toml  tasks.py
coffee_leaf_classifier/.devcontainer/: devcontainer.json
coffee_leaf_classifier/dockerfiles/: api.dockerfile  train.dockerfile
coffee_leaf_classifier/docs/: mkdocs.yaml
coffee_leaf_classifier/docs/source/: index.md
coffee_leaf_classifier/src/coffee_leaf_diseases/: train.py
coffee_leaf_classifier/tests/: test_data.py
configs/: config.yaml  sweep.yaml  vertex_train.yaml
configs/experiment/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
data/: .gitignore  coffee_leaf_diseases.dvc
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.ckpt.dvc
reports/: README.md
runs/profiler/: fit-pl_profile.txt  profiling_report.txt
src/coffee_leaf_classifier/: api.py  app.py  data.py  drift_detection.py  model.py  profiler_helper.py  test_wandb.py  train.py
tests/: locustfile.py  test_api.py  test_data.py  test_model.py
