[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "coffee_leaf_classifier"
version = "0.0.1"
description = "Coffee leaf classifier project for DTU MLOps final course"
authors = [
  { name = "Group 40", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "fastapi==0.128.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "python-multipart>=0.0.21",
    "pillow>=12.1.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
    "torchvision>=0.21.0",
    "typer==0.21.1",
    "uvicorn==0.40.0",
    "wandb>=0.23.1",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "google-cloud-storage>=3.8.0",
    "prometheus-client>=0.24.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "evidently>=0.7.20",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "mkdocstrings-python==2.0.1",
    "streamlit>=1.53.0",
    "locust>=2.43.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*", "*/_remote_module_non_scriptable.py"]
